fix(css): from uP5 css remove extra padding

--- a/src/main/webapp/css/esup-stock.css
+++ b/src/main/webapp/css/esup-stock.css
@@ -426,6 +426,8 @@ cursor: auto !important;
 	width: 67%;
 	float: left;
 	height:420px;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .esupstock .container #browserArea #browserMain {
